# Onyx

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CppCheckSuppressions.txt  README.md  ThirdPartyLicenses.md  generate_project.bat  generate_project.ps1  generate_project.sh  generate_projects.ps1  requirements.md
libs/: CMakeLists.txt  imgui-nodeeditor.patch  imgui-stacklayout.patch  imgui.cmake
libs/stacklayout/: imgui_stacklayout.cpp
libs/vulkanmemoryallocator/: CMakeLists.txt  vulkanmemoryallocator.h
libs/wayland/: CMakeLists.txt
onyx/modules/: CMakeLists.txt
onyx/modules/application/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/application/private/onyx/application/: application.cpp  main.cpp
onyx/modules/application/public/onyx/application/: application.h  enginesystemfactory.h
onyx/modules/assets/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/assets/private/onyx/assets/: asset.cpp  assethotreloadsystem.cpp  assetid.cpp  assetloader.cpp  assetloadrequest.cpp  assetsystem.cpp
onyx/modules/assets/public/onyx/assets/: asset.h  assetformat.h  assethandle.h  assethotreloadsystem.h  assetid.h  assetloader.h  assetloadrequest.h  assetserializer.h  assetsystem.h
onyx/modules/core/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/core/private/onyx/: color.cpp  debugging.cpp  guid.cpp  hash.cpp  stringid.cpp
onyx/modules/core/private/onyx/colors/: color.cpp
onyx/modules/core/private/onyx/engine/: enginevariable.cpp
onyx/modules/core/private/onyx/geometry/: eulerangles.cpp  rectserialization.cpp  vectorserialization.cpp
onyx/modules/core/private/onyx/log/: logger.cpp
onyx/modules/core/private/onyx/serialize/: serialization.cpp
onyx/modules/core/private/onyx/stream/: stream.cpp  stringstream.cpp
onyx/modules/core/private/onyx/string/: string.cpp
onyx/modules/core/private/onyx/thread/: thread.cpp
onyx/modules/core/public/onyx/: assert.h  bitwiseenum.h  color.h  debugging.h  defines.h  encoding.h  eventhandler.h  guid.h  hash.h  inplacefunction.h  math.h  morton.h  mortoncode2d.h  mortoncode3d.h  noncopyable.h  onyx.h  onyx_core_common.h  onyx_types.h  reference.h  reference.hpp  stringid.h  time.h  typetraits.h
onyx/modules/core/public/onyx/colors/: base.h  color.h  dark.h  light.h
onyx/modules/core/public/onyx/container/: arrayview.h  directedacyclicgraph.h  inplacearray.h  memorybuffer.h  span.h  staticarray.h  typelist.h
onyx/modules/core/public/onyx/engine/: enginesystem.h  enginesystemfactory.h  enginevariable.h  enginevariablesregistry.h  gametime.h
onyx/modules/core/public/onyx/function/: callback.h  signal.h
onyx/modules/core/public/onyx/geometry/: bivector3.h  common.h  componentmask.h  eulerangles.h  matrix2.h  matrix3.h  matrix4.h  rect2.h  rectserialization.h  rotor3.h  sat.h  swizzlemask.h  vector.h  vector2.h  vector3.h  vector4.h  vectorserialization.h
onyx/modules/core/public/onyx/log/: logger.h  loglevel.h  logmessage.h
onyx/modules/core/public/onyx/memory/: objectpool.h
onyx/modules/core/public/onyx/profiler/: profiletimer.h
onyx/modules/core/public/onyx/serialize/: deserializer.h  serialization.h  serializer.h
onyx/modules/core/public/onyx/stream/: stream.h  stringstream.h
onyx/modules/core/public/onyx/string/: compiletimestring.h  format.h  inplacestring.h  string.h
onyx/modules/core/public/onyx/thread/: thread.h
onyx/modules/core/public/onyx/units/: quantity.h  ratio.h  units.h
onyx/modules/editor/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/editor/private/editor/: editor_localization.cpp  editormodule.cpp  editorstandalone.cpp
onyx/modules/editor/private/editor/camera/: freecamera.cpp
onyx/modules/editor/private/editor/components/: cameracomponent.cpp  freecameracomponent_editor.cpp  idcomponent.cpp  transformcomponent.cpp
onyx/modules/editor/private/editor/modals/: assetselectionmodal.cpp
onyx/modules/editor/private/editor/modules/: nodeeditor.cpp  sceneeditor.cpp
onyx/modules/editor/private/editor/nodegraph/: arithmeticnodes_editor.cpp  grapheditorcontext.cpp  nodegrapheditorcontext.cpp  pin.cpp  rendergrapheditorcontext.cpp  rendergraphnodes_editor.cpp  shadergrapheditorcontext.cpp  vectornodes_editor.cpp  (+1 more)
onyx/modules/editor/public/editor/: editor_localization.h  editormodule.h
onyx/modules/entity/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/filesystem/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/gamecore/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/graphics/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/graphicscore/: CMakeLists.txt  source_definitions.cmake
onyx/modules/input/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/input/tools/: source_definitions.cmake
onyx/modules/inputactions/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/inputactions/editor/: source_definitions.cmake
onyx/modules/localization/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/nodegraph/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/physics/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/platform/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/profiler/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/rhi/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/ui/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
onyx/modules/volume/: CMakeLists.txt  CMakeSettings.json  dependencies.cmake  source_definitions.cmake
onyx/tests/: CMakeLists.txt  randomnumbertuplegenerator.h  test_asynctask.cpp  test_directedacyclicgraph.cpp  test_morton32.cpp  test_morton64.cpp  test_reference.cpp  test_threading.cpp  test_tree.cpp
onyx/tests/core/geometry/: test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
(+1294 files in other folders)
