if(NOT IS_DIRECTORY ${PROJECT_SOURCE_DIR})
    message(FATAL_ERROR "Please build using the outermost CMakeLists.txt file.")
endif()

option(ONYX_PROFILER_ENABLED "Enable profiler" OFF)

list(APPEND ONYX_PUBLIC_DEFINES
    $<IF:$<BOOL:${ONYX_PROFILER_ENABLED}>,ONYX_PROFILER_ENABLED=1,ONYX_PROFILER_ENABLED=0>
)
set(ONYX_PUBLIC_DEFINES ${ONYX_PUBLIC_DEFINES} PARENT_SCOPE)

#### Target ####
set(CURRENT_TARGET onyx-profiler)
include(${CMAKE_CURRENT_SOURCE_DIR}/dependencies.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/source_definitions.cmake)

add_onyx_module(${CURRENT_TARGET}
    PUBLIC_SOURCES ${TARGET_PUBLIC_SOURCES}
    PRIVATE_SOURCES ${TARGET_PRIVATE_SOURCES}
    PUBLIC_DEPENDENCIES ${TARGET_PUBLIC_DEPENDENCIES}
    PRIVATE_DEPENDENCIES ${TARGET_PRIVATE_DEPENDENCIES}
)